CMakePM: Implement "Build Only the Application to Be Run"

The "Build Only the Application to Be Run" setting of "Build before
deploying" was missing from the CMake project manager.

Fixes: QTCREATORBUG-31416
Change-Id: I6caff1f2ec1c9a58c4a90bc949b2df34776482da
Reviewed-by: Marcus Tillmanns <marcus.tillmanns@qt.io>